blurry image fix for chrome

--- a/packages/portal-style/src/modules/_post-content.scss
+++ b/packages/portal-style/src/modules/_post-content.scss
@@ -60,6 +60,7 @@
 
   img {
     max-width: 100%;
+    image-rendering: -webkit-optimize-contrast;
   }
 
   p:last-child {
